school/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        env:       # For production use, move these environment variables to ConfigMap (non-sensitive) and Secret (sensitive data like passwords)
        - name: MYSQL_ROOT_PASSWORD
          value: root
        - name: MYSQL_DATABASE
          value: school
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-init
        configMap:      # Initialization SQL mounted here will run only if /var/lib/mysql is empty, i.e., when the container starts for the first time.
          name: mysql-init
