school/school-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: school-management-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-management-system
  template:
    metadata:
      labels:
        app: school-management-system
    spec:
      containers:
      - name: school-management-system
        image: ahmedlebshten/school_management_system:20
        ports:
        - containerPort: 80
