school/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: school
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
