school/school-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-management-system-svc
spec:
  type: LoadBalancer
  selector:
    app: school-management-system
  ports:
    - port: 80
      targetPort: 80
