school/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: school-management-system-svc
spec:
  type: ClusterIP
  selector:
    app: school_management_system
  ports:
  - port: 80
    targetPort: 2020
